# s-k8-proxy-rebuild

./: README.md  credentials.env  main.go  readme.md
k8s-manifests/: secrets.yaml  squid.yaml
upwork-devs/hanyhesham/: README.md
upwork-devs/hanyhesham/k8s-manifests/: icap.yaml  ingress.yaml  nginx.yaml  squid.yaml
upwork-devs/hanyhesham/k8s-manifests/secrets/: entrypoint.sh  entrypoint.yaml  subfilter.sh
upwork-devs/mohit-sengar/: .gitignore  Minio_RabbitMQ.sln  readme.md
upwork-devs/mohit-sengar/MinIORabbitMQReceiver/: MinIORabbitMQReceiver.csproj  Program.cs
upwork-devs/mohit-sengar/MinIORabbitMQSender/: MinIORabbitMQSender.csproj  Program.cs
upwork-devs/mohit-sengar/MinIORabbitMQSender/Properties/: launchSettings.json
upwork-devs/pranay-sahith/: README.md
upwork-devs/pranay-sahith/chart/: Chart.yaml  values.yaml
upwork-devs/pranay-sahith/chart/templates/: _helpers.tpl  deployment.yaml  hpa.yml  icap_service.yaml  service.yaml  squid_service.yaml
upwork-devs/silvanayousry/: .gitignore  main.go  readme.md
upwork-devs/son-ha/: README.md  README_Kubernetes.md  gwproxy.env  quickstart.sh
upwork-devs/son-ha/c-icap/: .gitmodules  Dockerfile  Makefile  README.md  README_GW.md  docker-compose.yml
upwork-devs/son-ha/c-icap/Documentation/: building_icap_docker_image.md  threat_model_onpremise.md
upwork-devs/son-ha/c-icap/Glasswall-Rebuild-SDK-Evaluation/: CHANGES.md  README.md
upwork-devs/son-ha/c-icap/c-icap/: .gitignore  request.c
upwork-devs/son-ha/c-icap/c-icap-modules/: .gitignore  autoconf.h.in  configure.ac
upwork-devs/son-ha/c-icap/c-icap-modules/services/gw_rebuild/: Makefile.am  gw_body.c  gw_body.h  gw_proxy_api.h  gw_rebuild.c  gw_rebuild.conf  gw_rebuild.h
upwork-devs/son-ha/c-icap/c-icap-modules/services/gw_test/: Makefile.am  filetypes.h  glasswall_sdk.c  glasswall_sdk.h  gw_body.c  gw_body.h  gw_test.c  gw_test.conf  gw_test.h  gwfile.h  gwfilestatus.h  gwfiletypes.c  gwfiletypes.h
upwork-devs/son-ha/c-icap/c-icap-modules/services/gw_test/templates/en/: POLICY_ISSUE
(+25 files in other folders)
